--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ footer h6 {
     font-size: 6rem;
   }
 }
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 375px) {
   img {
     padding-top: 20px;
   }
@@ -327,6 +327,9 @@ footer h6 {
   }
   .mainHeader {
     font-size: 4rem;
-    padding-top: 400px;
+    padding-top: 200px;
+  }
+  .navbar {
+    position: sticky;
   }
 }
