--- a/style.css
+++ b/style.css
@@ -64,15 +64,16 @@ hr {
 }
 
 .navbar {
-  background-color: transparent;
-  background-color: #7b8898;
-  position: fixed;
+  /* background-color: transparent; */
+  background-color: black;
+  /* position: fixed; */
   z-index: 8;
 }
 
 .navbar-brand {
   padding: 60px;
-  color: white !important;
+  /* color: white !important; */
+  /* background-color: rgba(255, 255, 255, 0.15); */
   display: inline;
 }
 
@@ -85,7 +86,7 @@ hr {
 }
 
 .mainHeader {
-  padding-top: 300px;
+  padding-top: 200px;
   font-size: 6rem;
 }
 
