--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
-@font-face {
+/* @font-face {
   font-family: "monument_extendedregular";
-  src: url("monumentextended-regular-webfont.woff2") format("woff2"),
-    url("monumentextended-regular-webfont.woff") format("woff");
+  src: url("MonumentExtended-FreeForPersonalUse 2/monumentextended-regular-webfont.woff2")
+      format("woff2"),
+    url("MonumentExtended-FreeForPersonalUse 2/monumentextended-regular-webfont.woff")
+      format("woff");
   font-weight: normal;
   font-style: normal;
-}
+} */
 
-@font-face {
+/* @font-face {
   font-family: "monument_extendedultrabold";
   src: url("monumentextended-ultrabold-webfont.woff2") format("woff2"),
     url("monumentextended-ultrabold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 html,
 body {
@@ -33,7 +35,7 @@ body {
   background-repeat: no-repeat;
 }
 
-body {
+/* body {
 }
 #doughnut,
 #doughnut2,
@@ -46,7 +48,12 @@ body {
 #skill3,
 #skill4 {
   position: relative;
+} */
+
+.btn4 {
+  padding-top: 90px;
 }
+
 .container {
   color: white;
 }
@@ -164,6 +171,12 @@ hr {
   top: 0;
 } */
 
+.progress-circle {
+  margin-right: auto;
+  margin-left: auto;
+  background-color: white;
+}
+
 .projectSec {
   padding-top: 200px;
   font-size: 4rem;
@@ -172,6 +185,11 @@ hr {
 .conWidth {
   padding-top: 150px;
   width: 50%;
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 .btn1 {
@@ -200,6 +218,7 @@ hr {
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 10px 16px;
+  background-color: red;
 }
 
 .btn-lg {
@@ -310,6 +329,184 @@ footer h6 {
 
 .showcase h1 {
   font-size: 1.5rem;
+}
+
+.progress {
+  width: 150px;
+  height: 150px;
+  line-height: 150px;
+  background: none;
+  margin: 0 auto;
+  box-shadow: none;
+  position: relative;
+}
+.progress:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.progress > span {
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+.progress .progress-left {
+  left: 0;
+}
+.progress .progress-bar {
+  width: 100%;
+  height: 100%;
+  background: none;
+  border-width: 2px;
+  border-style: solid;
+  position: absolute;
+  top: 0;
+}
+.progress .progress-left .progress-bar {
+  left: 100%;
+  border-top-right-radius: 80px;
+  border-bottom-right-radius: 80px;
+  border-left: 0;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+}
+.progress .progress-right {
+  right: 0;
+}
+.progress .progress-right .progress-bar {
+  left: -100%;
+  border-top-left-radius: 80px;
+  border-bottom-left-radius: 80px;
+  border-right: 0;
+  -webkit-transform-origin: center right;
+  transform-origin: center right;
+  animation: loading-1 1.8s linear forwards;
+}
+.progress .progress-value {
+  width: 85%;
+  height: 85%;
+  border-radius: 50%;
+  border: 2px solid #ebebeb;
+  font-size: 32px;
+  line-height: 125px;
+  text-align: center;
+  position: absolute;
+  top: 7.5%;
+  left: 7.5%;
+}
+.progress .progress-value2 {
+  padding-left: 50px;
+  padding-top: 30px;
+}
+
+.progress .progress-value3 {
+  padding-top: 30px;
+  padding-left: 25px;
+}
+
+.progress .progress-value4 {
+  padding-top: 30px;
+  padding-left: 60px;
+}
+
+/* .progress.blue .progress-bar {
+  border-color: #049dff;
+}
+.progress.blue .progress-value {
+  color: #049dff;
+} */
+.progress.blue .progress-left .progress-bar {
+  animation: loading-2 1.5s linear forwards 1.8s;
+}
+.progress.yellow .progress-bar {
+  border-color: white;
+}
+.progress.yellow .progress-value {
+  color: rgb(77, 77, 77);
+}
+.progress.yellow .progress-left .progress-bar {
+  animation: loading-3 1s linear forwards 1.8s;
+}
+/* .progress.pink .progress-bar {
+  border-color: #ed687c;
+}
+.progress.pink .progress-value {
+  color: #ed687c;
+}
+.progress.pink .progress-left .progress-bar {
+  animation: loading-4 0.4s linear forwards 1.8s;
+}
+.progress.green .progress-bar {
+  border-color: #1abc9c;
+}
+.progress.green .progress-value {
+  color: #1abc9c;
+} */
+.progress.green .progress-left .progress-bar {
+  animation: loading-5 1.2s linear forwards 1.5s;
+}
+/* @keyframes loading-1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+}
+@keyframes loading-2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(144deg);
+    transform: rotate(144deg);
+  }
+}
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+}
+@keyframes loading-4 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(36deg);
+    transform: rotate(36deg);
+  }
+}
+@keyframes loading-5 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(126deg);
+    transform: rotate(126deg);
+  }
+} */
+@media only screen and (max-width: 990px) {
+  .progress {
+    margin-bottom: 20px;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
