--- a/style.css
+++ b/style.css
@@ -118,61 +118,6 @@ hr {
   height: 50%;
 }
 
-/* skillssec */
-/* 
-.skillCircle {
-  font-family: "Quatro";
-  font-size: 1.8rem;
-  font-weight: 550;
-  letter-spacing: 1px;
-}
-.skillCircle2 {
-  font-family: "Quatro";
-  font-size: 1.1rem;
-  font-weight: 550;
-  letter-spacing: 1px;
-}
-
-
-.progress {
-  width: 150px;
-  height: 150px;
-  background: none;
-  position: relative;
-  display: inline-block;
-  margin: 5px;
-}
-
-.progress::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  border: 6px solid white;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.progress > span {
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  z-index: 1;
-}
-
-.progress .progress-bar {
-  width: 100%;
-  height: 100%;
-  background: none;
-  border-width: 6px;
-  border-style: solid;
-  position: absolute;
-  top: 0;
-} */
-
 .progress-circle {
   margin-right: auto;
   margin-left: auto;
@@ -194,13 +139,6 @@ hr {
   box-shadow: none;
 }
 
-.btn1 {
-  padding-top: 100px;
-  font-family: "QuatroR";
-  color: rgb(102, 102, 102);
-  border-radius: 24px;
-}
-
 .btn {
   display: inline-block;
   padding: 6px 12px;
@@ -220,7 +158,6 @@ hr {
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 10px 16px;
-  background-color: red;
 }
 
 .btn-lg {
@@ -396,7 +333,7 @@ footer h6 {
   width: 85%;
   height: 85%;
   border-radius: 50%;
-  border: 2px solid #ebebeb;
+  /* border: 2px solid #ebebeb; */
   font-size: 32px;
   line-height: 125px;
   text-align: center;
@@ -404,19 +341,9 @@ footer h6 {
   top: 7.5%;
   left: 7.5%;
 }
-.progress .progress-value2 {
-  padding-left: 50px;
-  padding-top: 30px;
-}
-
-.progress .progress-value3 {
-  padding-top: 30px;
-  padding-left: 25px;
-}
-
-.progress .progress-value4 {
-  padding-top: 30px;
-  padding-left: 60px;
+.progress .progress-value1 {
+  font-size: 15px;
+  padding-left: 15px;
 }
 
 /* .progress.blue .progress-bar {
@@ -432,79 +359,16 @@ footer h6 {
   border-color: white;
 }
 .progress.yellow .progress-value {
-  color: rgb(77, 77, 77);
+  color: white;
 }
 .progress.yellow .progress-left .progress-bar {
   animation: loading-3 1s linear forwards 1.8s;
 }
-/* .progress.pink .progress-bar {
-  border-color: #ed687c;
-}
-.progress.pink .progress-value {
-  color: #ed687c;
-}
-.progress.pink .progress-left .progress-bar {
-  animation: loading-4 0.4s linear forwards 1.8s;
-}
-.progress.green .progress-bar {
-  border-color: #1abc9c;
-}
-.progress.green .progress-value {
-  color: #1abc9c;
-} */
+
 .progress.green .progress-left .progress-bar {
   animation: loading-5 1.2s linear forwards 1.5s;
 }
-/* @keyframes loading-1 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-}
-@keyframes loading-2 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(144deg);
-    transform: rotate(144deg);
-  }
-}
-@keyframes loading-3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-  }
-}
-@keyframes loading-4 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(36deg);
-    transform: rotate(36deg);
-  }
-}
-@keyframes loading-5 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(126deg);
-    transform: rotate(126deg);
-  }
-} */
+
 @media only screen and (max-width: 990px) {
   .progress {
     margin-bottom: 20px;
